Fix overflowing texts

--- a/src/pages/tarif/tarif.scss
+++ b/src/pages/tarif/tarif.scss
@@ -22,7 +22,7 @@
         width: 100%;
         margin-bottom: 4rem;
         .offre-item {
-            height: 70vh;
+            min-height: 70vh;
             width: 100%;
             display: flex;
             flex-direction: row;
